--- a/index.html
+++ b/index.html
@@ -1,84 +1,105 @@
 <!DOCTYPE html>
-<html>
-<body><h1>
-<title>To do list</title> 
-    To do List
-    <link rel="stylesheet" href="https://discordapp.com/channels/320405157399494667/320405157399494667" type="text/css" />
-</h1>
-<ul><li> Help Baru with dankmoor farming and some aphrodite farming</li>
-<li> Hatch my penta damage fire pet with Wolfthewiz at 5-6 pm today</li>
-<li> Help as many people today with farming and single tappable bosses</li>
-<li> Occupate choices and jokes in staff_room_pg with a sizable performance</li>
-<li> Test the skipping dungeons speedrun mark trick Jay provided with everyone</li> </ul>
+<html class="red.text">
 
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
-<img src="https://media.giphy.com/media/gKGfL9dnKXRCg/giphy.gif"></img>
+<head>
+ <title>To do list</title>
+    <link rel="stylesheet" href="index.css">
+ </head>
+ <body>
+ <h1>To do</h1>
+    <div class="headerbar"> To do List
+    <a href="https://discordapp.com/channels/320405157399494667/320405157399494667">Base of operations</a>
+    <a href="1">Edit</a> <a href="Lambs">Delete</a> <a href="show.html">Go back...
+            </a> 
+            </div>
+    <!--Come hither to thou place of gratitude and helpings for wiz!-->
+    </body>
+    
+<form action="/action_page.php" method="get">
+  <ul><li><input type="checkbox" name="Drink" value="Pepsi"> I like Pepsi<br>
+  <li><input type="checkbox" name="Drink" value="Coke" checked="checked"> I like Coke<br>
+    <input type="submit" value="Submit"></li>
+    <input type="text" placeholder="Name">
+    <input type="number" placeholder="Organization">
+    <input type="number" placeholder="Creditcardnumber">
+</form>
+
+</h1>
+ <a href="https://discordapp.com/channels/320405157399494667/320405157399494667">Base of operations</a> {Remember to fix this}
+<ul><li> Help Baru with dankmoor farming and some aphrodite farming<span class="date"> January 1st</span></li>
+<li> Hatch my penta damage fire pet with Wolfthewiz at 5-6 pm today<span class="date"> January 2nd</span></li>
+<li> Help as many people today with farming and single tappable bosses<span class="date"> January 3rd</span></li>
+<li> Occupate choices and jokes in staff_room_pg with a sizable performance<span class="date"> January 4th</span></li>
+<li><b> Test the skipping dungeons speedrun mark trick Jay provided with everyone<span class="date"> January 5th</span></b></li> </ul>
+    My consciousness: 
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img> 
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+<img src="https://3.bp.blogspot.com/-RQHmvIphgk0/ULZKEr1DUJI/AAAAAAAAAKg/-aj-5kW7qNs/s320/240x196px-LL-e66ddef6_reverse-1253886001_office-no.gif"></img>
+
 </body>
 </html>
