--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
  <title>To do list</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script type="text/javascript" src="index.js"></script>
  </head>
  <body>
  <h1>To do</h1>
@@ -15,14 +16,14 @@
     <!--Come hither to thou place of gratitude and helpings for wiz!-->
     </body>
     
-<form action="/action_page.php" method="get">
+
   <ul><li><input type="checkbox" name="Drink" value="Pepsi"> I like Pepsi<br>
   <li><input type="checkbox" name="Drink" value="Coke" checked="checked"> I like Coke<br>
-    <input type="submit" value="Submit"></li>
+    <input type="submit" class="buttonclass" value="Submit"></li>
     <input type="text" placeholder="Name">
     <input type="number" placeholder="Organization">
-    <input type="number" placeholder="Creditcardnumber">
-</form>
+    <input type="number" placeholder="Creditcardnumber"></ul>
+
 
 </h1>
  <a href="https://discordapp.com/channels/320405157399494667/320405157399494667">Base of operations</a> {Remember to fix this}
